# pangolin

./: AUTHORS  LICENSE  Makefile.am  README  README.md  SimulationRun.pm  codemeta.json  config  config.template  configure.ac  generate_config.pl  paste.pl  pbs_run.batch  simulation_run.pl
_darcs/: hashed_inventory
_darcs/patches/: 0004512917-56db41f2e3f25a14718b2f7043d9d4d09aa68e973c0a35734c92cac340cd7dd0
_darcs/prefs/: repos  sources
doc/: Makefile
doc/docbook/: Makefile  configuration.xml  custom_fo.xsl  custom_html.xsl  documentation.xml  pangolin-doc.xml  postprocessing.xml  preprocessing.xml  quickstart.xml  requirements.xml  run.xml  tests.xml  troubleshoot.xml
doc/docbook/user_manual/: docbook_freebsd.css
doc/doxygen/: Makefile  doxygen.conf  main_doxygen.md
doc/planning/: gantt-chart-d3.js  index.html  planning.css  planning.js
generate/: Makefile.am  analytical_case.f90  main.py  pangolingrid.py  plotting.py
hdf5/: Makefile  pango_write.f90
m4/: check_mpi.m4  check_perl.m4  hdf5.m4
netcdf/: scrip_interface.f90  test_scrip.f90  test_write_pango.f90
plot/R/: Makefile  README  create_diff.r  load_balance.r  load_io_package.r  mixing.r  nb_cells.r  nb_cells_comp.r  nbcells_approx.r  plot_cellsratio.r  plot_cflimpact.r  plot_cv_rate.r  plot_cv_rate_hourdin.r  plot_cv_rate_nbcells.r  plot_cv_rate_optimal.r  plot_cv_rate_res.r  plot_cv_rate_slope.r  plot_cv_rate_windscorr.r  plot_equator.r  plot_error.r  plot_filaments.r  plot_filaments_grids.r  plot_filaments_nbcells.r  plot_filaments_slope.r  plot_filaments_windscorr.r  plot_min_res_estim.r  plot_mixing.r  plot_mixing_all1.r  plot_mixing_all2.r  plot_mse.r  plot_nbcells.r  plot_nbcells_estim.r  plot_precision.r  plot_ratiocomm.r  plot_speedup_all.r  plot_speedup_chem.r  plot_speedup_opt.r  plot_times.r  script.r
plot/R/basics/: plot_allspeedup.r  plot_cv_rate.r  plot_filament.r  plot_filament_compare.r  plot_filaments.r  plot_pseudospeedup_pseudochem.r  plot_speedup.r  plot_speedup_pseudochem.r
plot/cairo/: CairoDrawing.cpp  CairoDrawing.h  Colormap.cpp  Colormap.h  Makefile  main.cpp  parser.cpp  parser.h
plot/metapost/: plot_grid.mp
plot/ncl/: 2d.ncl  Makefile  contour_ascii.ncl  contour_hdf5.ncl  contour_interp_error.ncl  contour_netcdf.ncl  create_movie_ncl.pl  interpol.ncl  movie.pl  multiplot.pl  one_contour_plot.ncl  pangolin.ncl  plot_contour_array.ncl  plot_contour_claw.ncl  plot_contour_slotted_pango.ncl  polygon.ncl  rotate_pdf.pl  scatter.ncl  set_res_lauritzen.ncl
plot/python/: create_diff.pl  error.py  filament.py  grid_interface.py  last_band_size.py  lib_plot.py  main.py  plot.py  plot_area_error.py  plot_error.py  plot_mesh.py  plot_nb_cells_error.py  processtimes.py  processtimes2.py  ratio_nb_cells.py
processing/diagnostics/: Makefile  diag.f90  extract_equator.f90  io.f90  pango_diagnostics.f90  several_dt.sh  several_extracts.sh  several_min_res.sh  several_split.sh
prototype/: write_winds.m
prototype/analyses/: isoteta.m  lire_ana.m  tratet.m
prototype/matlab/: adv_u_alone.m  adv_v_alone.m  advection_global.m  check_symmetry.m  check_winds.m  circul_red.m  correction_u_red.m  correction_v_red.m  estim_C.m  get_max_nodes.m  get_nb_cells.m  get_nb_nodes.m  grille.m  init_C_red.m  masse.m  no_cor_mass_v.m  read_data.m  slope_limit.m  sub_grille.m  update_winds.m  view_vectorfield_red.m  winds_standard_cv.m  winds_standard_dv.m  write_data.m  write_red_grid.m  write_vectorfield.m  write_winds.m
prototype/matlab/old/: Cl2Cs.m  Cs2Cl.m  adv_u5.m  adv_v7.m  circul.m  cor_massu.m  cor_massv.m  ecr_hem.m  grille.m  lire_hem.m  masse.m  ncl_write2.m  prog_secteur_hem.m  prog_secteur_hem_reprise.m  reg2sec.m  reg2sec_u.m  sub_grille.m  visu_hem.m  visu_latlon.m  xlatlon.m
prototype/matlab/unused/: Cs2Cl.m  circul.m  circul_test.m  init_C.m  ncl_read.m  ncl_write.m  ncl_write_vect.m  reg2sec.m  reg2sec_u.m
prototype/metapost/: lib_plot.mp  partition.1  partition.mp  partition.tex  plot_grid.mp  reduced_grid_init.mp  script_partition.sh
prototype/old_plot/: plot_ncl.sh
prototype/old_plot/gnuplot/: animation.plt  animation.sh  condition_cfl_zonal.eps  courant_nb.plt  data_color.plt  display.sh  isolines.plt  loop.plt  vectorfield.gnu
prototype/old_plot/ncl/: python_visu.ncl  raster_reduced_grid_test.ncl  trajectoires.ncl  visu_contour.ncl  visu_point.ncl  visu_polygon_oo.ncl  visu_raster.ncl  visu_sample.ncl  visu_sample2.ncl
prototype/python/: analytical.py  compare.py  error_norm.py  fibonacci_grid.py  filament.py  grid_analytical.py  grid_class.py  lib_error.py  lib_plot.py  nb_cells.py  partition_class.py  partitioning.py  plot.py  plot_convergence_rate.py  quad_all_errors.py  test.sh
prototype/python/misc/: 3dplot.py  compare_slices.py  courant_nb.py  vectorfield.py
prototype/python/old/: advection_horizontal.py  analytical_both.py  analytical_failed.py  analytical_forward.py  analytical_reduced.py  analytical_reduced_zonal.py  analytical_test.py  analytical_test_dt.py  analytical_zonal.py  analytical_zonal_both.py  compare_slices.py  grid.py  grid_analytical.py  init.py  mesh.py  old_analytical.py  oldanalytical.py  (+10 more)
scotch_partitioning/: Makefile  grid.f90  output.f90  partitioning.f90  script_partition.sh
src/: Makefile.am  advection_2d.F90  analytical_data.inc  analytical_partitioning.F90  band_grid_class.F90  configuration_class.F90  data_check.F90  date.c  debug.f90  global_grid_class.f90  io.inc  io_ascii.inc  io_hdf5.inc  io_netcdf.inc  list_tracers_class.F90  message.F90  output.F90  pangolin.F90  pangolin_run.F90  parameters.F90  partition_class.F90  partitioning_class.F90  profiling.F90
tests/: Makefile.am  pbs_jade.batch  pbs_run.batch  tests_run.pl
tests/src/: Makefile.am  compare_hdf5.c  compare_netcdf.c  plotting.f90  tests_advection_2d.F90  tests_borders.f90  tests_cells.f90  tests_output.f90  tests_parallel.f90  tests_partitions.f90  tests_sequential.f90
tests/t/: CompareAsciiFiles.pm  Functional.pm  UnitTests.pm  functional_hourdin.t  functional_io_hdf5.t  functional_lauritzen.t  hourdin.t  unit_parallel.t  unit_sequential.t
(+48 files in other folders)
